--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -272,6 +272,7 @@
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="Vca-51-Ogp"/>
+                                        <exclude reference="1UF-pt-WAu"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -315,26 +316,6 @@
             <point key="canvasLocation" x="90.839694656488547" y="-33.098591549295776"/>
         </tableViewCell>
     </objects>
-    <designables>
-        <designable name="0eO-wQ-6fx">
-            <size key="intrinsicContentSize" width="122.66666666666667" height="12"/>
-        </designable>
-        <designable name="1rx-zU-ucu">
-            <size key="intrinsicContentSize" width="37.666666666666664" height="14.333333333333334"/>
-        </designable>
-        <designable name="F7S-op-5qg">
-            <size key="intrinsicContentSize" width="407" height="612"/>
-        </designable>
-        <designable name="Xr0-6b-sUq">
-            <size key="intrinsicContentSize" width="72.666666666666671" height="14.333333333333334"/>
-        </designable>
-        <designable name="ejV-6Z-Jem">
-            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
-        </designable>
-        <designable name="gLy-u7-xbI">
-            <size key="intrinsicContentSize" width="115" height="16.666666666666668"/>
-        </designable>
-    </designables>
     <resources>
         <image name="girl" width="407" height="612"/>
         <image name="note_icon" width="24" height="24"/>
